--- a/3_HANDLEBASS/6_with/views/layouts/main.handlebars
+++ b/3_HANDLEBASS/6_with/views/layouts/main.handlebars
@@ -9,8 +9,10 @@
 <body>
     <header>
         <nav>
-            <a href="">Home</a>
+            <a href="/">Home</a>
             <a href="">Users</a>
+            <a href="/post">Post</a>
+        </nav>
     </header>
     {{{body}}}
 </body>
